# gradeshift

./: .env.example  README.md  compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/http/: middleware.rs  mod.rs
api/src/http/rest/: auth.rs  mod.rs  organisations.rs  subjects.rs
database/schemas/: group_members.sql  groups.sql  organisation_permissions.sql  organisation_role.sql  organisations.sql  sessions.sql  subject_assignments.sql  subjects.sql  task_assignments.sql  task_objectives.sql  task_sub_objectives.sql  tasks.sql  users.sql
website/: package-lock.json  package.json  tailwind.config.ts
website/src/api/: rest.ts
website/src/api/rest/: auth.ts  organisations.ts  subjects.ts
website/src/app/: layout.tsx  not-found-home.tsx  not-found.tsx  page.tsx  providers.tsx
website/src/app/home/: organisations.tsx  page.tsx
website/src/app/login/: loginCard.tsx  page.tsx
website/src/app/organisation/[organisationId]/: organisationComponent.tsx  page.tsx
website/src/app/settings/: page.tsx  settingsCard.tsx
website/src/app/subject/[subjectId]/: page.tsx  subjectsComponent.tsx
website/src/app/task/[taskId]/: page.tsx
website/src/components/: footer.tsx
website/src/components/navbar/: navbar.tsx  navbarInfo.tsx  navbarLogo.tsx
website/src/components/ui/: dropdown-menu.tsx
website/src/hooks/: session.tsx
