[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "chrono",
    "uuid",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde"] }
